--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "swiper": "^11.1.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
